--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                     <h2 class="mt-5">About Us</h2>
                     <hr>
                     <p class="mb-5">Pellentesque elementum libero enim, eget gravida nunc laoreet et. Nullam ac enim<br>
-                         auctor, fringilla risus at, imperdiet turpis. Pellentesque elementum libero enim.</p>
+                         auctor, fringilla risus at, imperdiet turpis. Pellentesque elementum libero enim..</p>
                 </div>
                 <div class="row">
                     <div class="col-md-7">
