--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
         <link rel="stylesheet" href="css/all.css">
         <link rel="stylesheet" href="css/index.css">
         <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
+        
+        <meta name="viewport" content="width=device-width, initial-scale=1.0"
        
         <script src="js/popper.min.js"></script>
         <script src="js/bootstrap.min.js"></script>
